Migrate to last version of API